Bug 963952 - [e10s] Don't use basic compositor when using D3D11 compositor (r=mattwoodrow)