widget/windows/nsWindow.h
@@ -287,6 +287,8 @@ public:
 
   virtual void GetPreferredCompositorBackends(nsTArray<mozilla::layers::LayersBackend>& aHints);
 
+  virtual bool ShouldUseOffMainThreadCompositing();
+
 protected:
 
   virtual void WindowUsesOMTC() MOZ_OVERRIDE;
